--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,190 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 /* Common styles */
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
-@import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+.header {
+  border-bottom: 1px solid black;
+}
+.btn {
+  font-family: inherit;
+  border-radius: 8px;
+  padding: 8px 16px;
+  min-width: 75px;
+  height: 40px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background-color: #4e75ff;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn:hover,
+.btn:focus {
+  background-color: #6c8cff;
+}
+
+form {
+  text-align: center;
+}
+
+input {
+  min-width: 272px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #808080;
+  border-radius: 4px;
+  outline: none;
+  background-color: transparent;
+  border: 1px solid #808080;
+  height: 40px;
+  margin-right: 8px;
+  padding-left: 16px;
+  transition: border-color var(--time) var(--cubic);
+}
+
+input:hover,
+input:focus {
+  border-color: #000;
+}
+input:focus-within {
+  border-color: #4e75ff;
+}
+a {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
+.gallery {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+@media only screen and (min-width: 768px) {
+  .gallery {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+}
+
+.thumb {
+  margin-bottom: 16px;
+}
+
+.thumb:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
+}
+
+@media only screen and (min-width: 768px) {
+  .thumb {
+    width: calc((100% - 24px) / 2);
+    margin-bottom: 0;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .thumb {
+    width: calc((100% - 48px) / 3);
+  }
+}
+.gallery-image {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+}
+
+.info {
+  padding: 0 10px;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 5px 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .info {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.info-item {
+  display: flex;
+  gap: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  .info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 8px solid #4e75ff;
+  width: 48px;
+  height: 48px;
+  animation: spin 2s linear infinite;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.scroll-to-top {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .scroll-to-top {
+    display: block;
+    position: fixed;
+    bottom: 210px;
+    right: 8%;
+
+    width: 45px;
+    height: 45px;
+    color: white;
+    background-color: black;
+    outline: 2px solid orange;
+    border-radius: 150px 150px 0px;
+    border: none;
+
+    cursor: pointer;
+
+    transition: opacity var(--time) var(--cubic), color var(--time) var(--cubic),
+      outline var(--time) var(--cubic);
+    animation: slide-top 1s linear 2s infinite alternate both;
+  }
+}
+
+.scroll-to-top:hover,
+.scroll-to-top:focus {
+  outline: 2px solid orange;
+}
+
+.js-transparent {
+  opacity: 0;
+  pointer-events: none;
+}
